--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Hi I'm Pierre, applied mathematics and computer science engineer. I do Computer Vision and Image Processing, and I like it!">
+	<meta name="description" content="Hi I'm Pierre, applied mathematics and computer science engineer. I do 3D Graphics, Computer Vision and Image Processing, and I like it!">
     <meta name="keywords" content="Pierre Baret, pierre, baret, pierrebaret, Software Engineer, Research and Development Engineer, C++ Engineer, resume, CV, personal, personal portfolio, computer vision engineer, image processing engineer">
 	<meta name="author" content="Pierre BARET">
 
@@ -53,7 +53,7 @@
 		<div class="intro">			
 			<h1>Pierre <span>Baret</span></h1>
             <div class="intro-sub">Software Engineer - Research &amp; Development</div>
-			<p>Graduated from Grenoble INP - Ensimag<br> Computer vision, image processing, 3D Graphics, Multimedia <br> Looking for opportunities all around the globe.</p>
+			<p>Graduated from Grenoble INP - Ensimag<br> Computer vision, image processing, 3D Graphics, Multimedia <br> Augmented Reality, Mixed Reality, Virtual Reality, Prototyping.</p>
 
             <div class="social-icons">
                 <ul class="list-inline">
@@ -115,7 +115,7 @@
                         </div>
                         <ul>
                             <li><strong>Name:</strong> Pierre Baret</li>
-                            <li><strong>Age:</strong> 23 years old</li>
+                            <li><strong>Age:</strong> 25 years old</li>
                             <li><strong>Address:</strong> 8 lot le ronjon, Tolvon, 38960 St Etienne de Crossey, France</li>
                             <li><strong>Nationality:</strong> French</li>
                             <li><strong>Phone:</strong> (+33) 6 86 34 51 01</li>
@@ -127,11 +127,11 @@
                 <div class="col-md-8 col-md-pull-4">
                     <div class="short-info wow fadeInUp">
                         <h3>Who I am</h3>
-                        <p>I am a 23 years old french engineer from Grenoble INP - ENSIMAG. I like to take on challenges and interesting projects and I would like to work as a R&amp;D Software Engineer in a cutting edge company.</p>
+                        <p>I am a 25 years old french engineer graduated from Grenoble INP - ENSIMAG. I like to take on challenges and interesting projects.</p>
                     </div>
                     <div class="short-info wow fadeInUp">
                         <h3>What I Do</h3>
-                        <p>I do mathematical modeling, design and implementation of complex problems in fields of application such as computer vision, image processing or 3D. I also have skills in Software Design (Design patterns) and Human Computer Interactions, allowing me to develop efficient, modular and user friendly softwares.</p>
+                        <p>I do mathematical modeling, design and implementation of complex problems in fields of application such as computer vision, image processing or 3D. I also have skills in Software Design (Design patterns) and Human Computer Interactions, allowing me to develop efficient, modular and user friendly softwares. I recently developped Augmented Reality applications for Google Tango phones and Microsoft Hololens.</p>
                     </div>
                     <div class="short-info wow fadeInUp">
                         <h3>What interests me</h3>
@@ -140,11 +140,13 @@
                             <li>Image Processing</li>
                             <li>Software R&amp;D</li>
                             <li>Sports &amp; Medical applications</li>
+                            <li>3D applications (AR, MR, VR among others).</li>
+                            <li>3D geometry.</li>
                         </ul>
                     </div>
                     <div class="short-info wow fadeInUp">
                         <h3>What's next</h3>
-                        <p>I would like to find opportunities outside of France.</p>
+                        <p>Cutting edge and fun projects rocks!</p>
                     </div>
                     <div class="short-info wow fadeInUp">
                         <h3>More about me</h3>
@@ -243,16 +245,33 @@
                     </div>
                     <div class="resume">
                         <ul class="timeline">
+                            <li>
+                                <div class="posted-date">
+                                    <span class="month">2017-2018</span>
+                                    <img src="./assets/images/logo_schneider.png" style="float:right; width:125px; height:auto;">
+                                </div><!-- /posted-date -->
+                                <div class="timeline-panel wow fadeInUp">
+                                    <div class="timeline-content">
+                                        <div class="timeline-heading">
+                                            <h3>Software Innovation Engineer</h3>
+                                            <span>Schneider Electric, San Francisco, CA, US</span>
+                                        </div><!-- /timeline-heading -->
+                                        <div class="timeline-body">
+                                            <p>18 months french <a href="https://export.businessfrance.fr/formule-vie/vie-en-bref.html">V.I.E **</a>. I was studying use cases and developping proofs of concept aroung emerging technologies. Our main interests were Augmented Reality and Mixed reality, for which I developped and released several PoC applications for Google Tango (AR) and Microsoft Hololenns (MR). <br> <span>Unity3D, C# Scripting, Prototyping with Google Tango SDK and Microsoft Hololens.</span> <br> ** a Volontariat International en Entreprise is a Fixed term contract for young french people allowing them to work abroad for french companies under Exchange Visitor Program.</p>
+                                        </div><!-- /timeline-body -->
+                                    </div> <!-- /timeline-content -->
+                                </div> <!-- /timeline-panel -->
+                            </li>
                             <li class="timeline-inverted">
                                 <div class="posted-date">
                                     <span class="month">2016</span>
-                                    <img src="./assets/images/logoinria.jpg" style="float:right; width:150px; height:auto;">
+                                    <img src="./assets/images/logoinria.jpg" style="float:right; width:125px; height:auto;">
                                 </div><!-- /posted-date -->
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
                                             <h3>Research Engineer</h3>
-                                            <span>INRIA Grenoble, Montbonnot</span>
+                                            <span>INRIA Grenoble, Montbonnot, FR</span>
                                         </div><!-- /timeline-heading -->
                                         <div class="timeline-body">
                                             <p>One year fixed-term contract. I worked on a big project in partnership with the CEA and Schneider Electric. My job was to do research, and to test different vision algorithms for an infrared sensor. The project's main interests were people counting and fall detection. <span>C++, OpenCV, Boost, Qt, low-level programming.</span></p>
@@ -263,13 +282,13 @@
                             <li>
                                 <div class="posted-date">
                                     <span class="month">2015</span>
-                                    <img src="./assets/images/thales.png" style="float:right; width:150px; height:auto;">
+                                    <img src="./assets/images/thales.png" style="float:right; width:125px; height:auto;">
                                 </div><!-- /posted-date -->
                                 <div class="timeline-panel wow fadeInUp">
                                     <div class="timeline-content">
                                         <div class="timeline-heading">
                                             <h3>Software R&amp;D Engineer</h3>
-                                            <span>Thales Electron Devices, R&amp;D Software Department, Moirans</span>
+                                            <span>Thales Electron Devices, R&amp;D Software Department, Moirans, FR</span>
                                         </div><!-- /timeline-heading -->
                                         <div class="timeline-body">
                                             <p>9 months experience (internship extended by a fixed-term contract). I worked on a 3D reconstruction project based on X-Rays images. I was in charge of the development of the whole geometric calibration module. <span>C++, OpenCV, Boost, Qt.</span></p>
@@ -318,7 +337,7 @@
                     <div class="skill-progress">
                         <div class="skill-title"><h3>3D Graphics</h3></div> 
                         <div class="progress">
-                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" ><span>60%</span></div>
+                            <div class="progress-bar six-sec-ease-in-out" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" ><span>60%</span></div>
                         </div><!-- /.progress -->
                     </div><!-- /.skill-progress -->
                     <div class="skill-progress">
@@ -370,7 +389,7 @@
             </div>
             <div class="row more-skill text-center">
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="91" data-color="e74c3c">
+                    <div class="chart" data-percent="85" data-color="e74c3c">
                         <span class="percent"></span>
                         <div class="chart-text"><span>C++</span></div>
                     </div>
@@ -394,21 +413,21 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="45" data-color="e74c3c">
+                    <div class="chart" data-percent="92" data-color="e74c3c">
                         <span class="percent"></span>
-                        <div class="chart-text"><span>OpenGL</span></div>
+                        <div class="chart-text"><span>Unity3D C#</span></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-2">
-                    <div class="chart" data-percent="25" data-color="e74c3c">
+                    <div class="chart" data-percent="60" data-color="e74c3c">
                         <span class="percent"></span>
-                        <div class="chart-text"><span>HTML/CSS/JS</span></div>
+                        <div class="chart-text"><span>Arduino</span></div>
                     </div>
                 </div>
             </div>
             <div class="row skill-chart text-center" style="margin-bottom: 50px; border-bottom: 1px solid grey;">
                 <h3>And also:</h3>
-                <p>Boost Library, Matlab/Scilab, Java, R, SQL, ADA, Git, SVN, LaTeX, Microsoft Office, Agile Methods...</p>
+                <p>Boost Library, OpenGL, Matlab/Scilab, Java, R, HTML/CSS/JS, SQL, ADA, Git, SVN, LaTeX, Microsoft Office, Agile Methods...</p>
                                 
             </div>
             <div class="skill-chart text-center">
@@ -423,10 +442,10 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
-                    <div class="chart" data-percent="92" data-color="e74c3c">
+                    <div class="chart" data-percent="96" data-color="e74c3c">
                         <span class="percent"></span>
                         <div class="chart-text"><span>English</span></div>
-                        <div class="chart-text"><span>915/990 at TOEIC test</span></div>
+                        <div class="chart-text"><span>915/990 at TOEIC test (2014)</span></div>
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
@@ -447,7 +466,7 @@
             <h2 class="section-title wow fadeInUp">Projects</h2>
             <div class="row">
                 
-                <!-- Project1 : PFE
+                <!-- Project1 : PFE -->
                 <div class="col-sm-4">
                     <article class="blog-post-wrapper">
                         <div class="figure">    
@@ -551,7 +570,7 @@
                             <i class="fa fa-paper-plane"></i>
                             <div class="contact-number">
                                 <strong>E-Mail</strong>
-                                pierre.baret@live.fr<br>
+                                <a href="mailto:pierre.baret@live.fr">pierre.baret@live.fr</a><br>
                             </div>
                         </div>
 
